Fixed image size error

--- a/proposal.tex
+++ b/proposal.tex
@@ -32,7 +32,7 @@ For the implementation of this project, I will create a simple web app allowing 
     \end{figure}
 	\begin{figure}[htbp]
         \centering
-		\includegraphics[width=0.8\textwidth]{./jp.jpeg}
+		\includegraphics[height=0.8\textheight, width=0.8\textwidth]{./jp.jpeg}
         \caption{Depiction of the planned user interface.}
         \label{fig:myfigure1}
     \end{figure}
