Errors in bibliography are corrected

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -34,7 +34,7 @@
   url        = {https://doi.org/10.1145/3687310},
   doi        = {10.1145/3687310},
   abstract   = {This tutorial article addresses a low power computer vision system as an example of a growing application domain of neural networks, exploring various technologies developed to enhance accuracy within the resource and performance constraints imposed by the hardware platform. Focused on a given hardware platform and network model, software optimization techniques, including pruning, quantization, low-rank approximation, and parallelization, aim to satisfy resource and performance constraints while minimizing accuracy loss. Due to the interdependence of model compression approaches, their systematic application is crucial, as evidenced by winning solutions in the Lower Power Image Recognition Challenge (LPIRC) of 2017 and 2018. Recognizing the typical heterogeneity of processing elements in contemporary hardware platforms, the effective utilization through parallelizing neural networks emerges as increasingly vital for performance enhancement. The article advocates for a more impactful strategy—designing a network architecture tailored to a specific hardware platform. For detailed information on each technique, the article provides corresponding references.},
-  journal    = {ACM Trans. Embed. Comput. Syst.},
+  journal    = {ACM Transactions on Embedded Computing Systems},
   month      = dec,
   articleno  = {19},
   numpages   = {31},
@@ -52,7 +52,7 @@
   url       = {https://doi.org/10.1145/3544548.3580643},
   doi       = {10.1145/3544548.3580643},
   abstract  = {The electronics-centered approach to physical computing presents challenges when designers build tangible interactive systems due to its inherent emphasis on circuitry and electronic components. To explore an alternative physical computing approach we have developed a computer vision (CV) based system that uses a webcam, computer, and printed fiducial markers to create functional tangible interfaces. Through a series of design studios, we probed how designers build tangible interfaces with this CV-driven approach. In this paper, we apply the annotated portfolio method to reflect on the fifteen outcomes from these studios. We observed that CV markers offer versatile materiality for tangible interactions, afford the use of democratic materials for interface construction, and engage designers in embodied debugging with their own vision as a proxy for CV. By sharing our insights, we inform other designers and educators who seek alternative ways to facilitate physical computing and tangible interaction design.},
-  booktitle = {Proceedings of the 2023 CHI Conference on Human Factors in Computing Systems},
+  booktitle = {Proceedings of the Conference on Human Factors in Computing Systems},
   articleno = {478},
   numpages  = {17},
   keywords  = {Computer Vision, Making, Materiality, Physical Computing, Tangible Interactions},
@@ -71,7 +71,6 @@
   url       = {https://doi.org/10.1145/3754333},
   doi       = {10.1145/3754333},
   abstract  = {The Observatorio Astron\'{o}mico de La Plata from the Facultad de Ciencias Astron\'{o}micas y Geof\'{\i}sicas (FCAG) of the Universidad Nacional de La Plata (UNLP) is one of the oldest observatories in South America. It has an enormous collection of observations, including thousands of spectroscopic and photographic glass plates. These observations were taken between the 1900s and the 1980s by renowned Argentine astronomers and constitute unique and unpublished records.Since 2019, the Recuperation of Historical Observational Work (ReTrOH, for its initials in Spanish) project has begun digitizing the 15,000+ samples of the spectroscopic plate collection.The digitization process for each plate is a complex, error-prone, multi-stage procedure requiring several person-hours. Consequently, a multidisciplinary team of astronomers and computer scientists was formed to develop the first system capable of assisting the user in this process. This system, designated PlateUNLP, employs signal processing algorithms and computer vision models to accelerate the process, reduce error rates, and standardizes data formats and processes. A key feature of PlateUNLP is its ability to automatically detect and record each spectrum recorded on the plates, along with the corresponding metadata, thus minimizing the need for user intervention.The developed system is publicly available under an open source license. Furthermore, while the system was developed with the ReTrOH project's requirements in mind, it could be adapted and used to assist with the digitization of thousands of other plates available around the world.PlateUNLP is therefore a first step towards making possible and practical the recovery of historical astronomical observations. Digitizing and exploiting these observations can provide a unique window into the past of our universe.},
-  note      = {Just Accepted},
   journal   = {J. Comput. Cult. Herit.},
   month     = jul,
   keywords  = {Astronomy, Spectrographic records, Spectroscopic plates, Computer Vision, YOLO, Object Detection, Wavelength calibration, Dynamic Time Warping}
