Add annotation for Retroh-unlpL: Conservation of the historical observational work of the astronomical observatory of la plata with computer vision.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -73,7 +73,8 @@
   abstract  = {The Observatorio Astron\'{o}mico de La Plata from the Facultad de Ciencias Astron\'{o}micas y Geof\'{\i}sicas (FCAG) of the Universidad Nacional de La Plata (UNLP) is one of the oldest observatories in South America. It has an enormous collection of observations, including thousands of spectroscopic and photographic glass plates. These observations were taken between the 1900s and the 1980s by renowned Argentine astronomers and constitute unique and unpublished records.Since 2019, the Recuperation of Historical Observational Work (ReTrOH, for its initials in Spanish) project has begun digitizing the 15,000+ samples of the spectroscopic plate collection.The digitization process for each plate is a complex, error-prone, multi-stage procedure requiring several person-hours. Consequently, a multidisciplinary team of astronomers and computer scientists was formed to develop the first system capable of assisting the user in this process. This system, designated PlateUNLP, employs signal processing algorithms and computer vision models to accelerate the process, reduce error rates, and standardizes data formats and processes. A key feature of PlateUNLP is its ability to automatically detect and record each spectrum recorded on the plates, along with the corresponding metadata, thus minimizing the need for user intervention.The developed system is publicly available under an open source license. Furthermore, while the system was developed with the ReTrOH project's requirements in mind, it could be adapted and used to assist with the digitization of thousands of other plates available around the world.PlateUNLP is therefore a first step towards making possible and practical the recovery of historical astronomical observations. Digitizing and exploiting these observations can provide a unique window into the past of our universe.},
   journal   = {J. Comput. Cult. Herit.},
   month     = jul,
-  keywords  = {Astronomy, Spectrographic records, Spectroscopic plates, Computer Vision, YOLO, Object Detection, Wavelength calibration, Dynamic Time Warping}
+  keywords  = {Astronomy, Spectrographic records, Spectroscopic plates, Computer Vision, YOLO, Object Detection, Wavelength calibration, Dynamic Time Warping},
+  annote    = {This article describes the development of the PlateUNLP application which lowers the cost and time to digitize astronomical data in plate collections. This system improves upon the collection of this data by individuals, which is an error prone and time-consuming process. The application’s frontend was developed with HTML and JavaScript for a web app. A Node.js and JavaScript backend manages the storage digitized plate data storage. A deep-learning module for the detection of the object within each plate was developed with Flask and Python. PlateUNLP works by first receiving a scanned plate, then segmenting its observations, segmenting the three parts of each observation, converting the spectra from 2D to 1D, and finally the user assists in analyzing the data. The part of this process most relevant to the project is the segmentation of images. This projection created a YOLO (You Only Look Once) detection model which rather than running a classifier on regions of interests approaches segmentation as a regression problem. YOLO could be helpful for separating letters or lines of text. Additionally, the system allowed for changes in brightness, noise, vertical image flipping, rotation, and scaling to help interpret the image which could be important when using computer vision to identify letters and transcribe text if the letters are at odd angles or on problematic surfaces. The authors of this article were primarily students or researchers in Computer Science and Astronomy at The Universidad Nacional de La Plata in Buenos Aires, a university officially recognized by the Argentine Ministry of Education. It is difficult for me to thoroughly investigate each author, but all seemed to be very experienced within their fields.}
 }
 
 @inproceedings{10.1145/3745238.3745531,
