Fixed bibliography capitalization

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -63,7 +63,7 @@
 
 @article{10.1145/3754333,
   author    = {Ponte Ah\'{o}n, Santiago and Aidelman, Yael and Seery, Juan and Quiroga, Facundo Manuel and Ronchetti, Franco and Hasperu\'{e}, Waldo and Iannuzzi, Matilde and Peralta, Romina and Lopez, M\'{o}nica and Bariviera, Aurelio F. and Cidale, Lydia and Gamen, Roberto},
-  title     = {ReTrOH-UNLP: Conservation of the Historical Observational Work of the Astronomical Observatory of La Plata with Computer Vision},
+  title     = {{ReTrOH-UNLP}: Conservation of the Historical Observational Work of the Astronomical Observatory of La Plata with Computer Vision},
   year      = {2025},
   publisher = {Association for Computing Machinery},
   address   = {New York, NY, USA},
