--- a/bibliography.bib
+++ b/bibliography.bib
@@ -122,3 +122,11 @@
   year     = {2025},
   keywords = {Model Context Protocol, MCP, AI model}
 }
+
+@article{cohen_afshar_tapson_schaik_2017,
+  title   = {EMNIST: Extending MNIST to handwritten letters},
+  doi     = {10.1109/ijcnn.2017.7966217},
+  journal = {2017 International Joint Conference on Neural Networks (IJCNN)},
+  author  = {Cohen, Gregory and Afshar, Saeed and Tapson, Jonathan and Schaik, Andre Van},
+  year    = {2017}
+}
