Add annotation for A user perspective on htr methods for the automatic transcription of rare scripts

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -113,7 +113,8 @@
   month      = mar,
   articleno  = {72},
   numpages   = {18},
-  keywords   = {codex runicus, human evaluation, handwritten text recognition tools, Historical manuscripts}
+  keywords   = {codex runicus, human evaluation, handwritten text recognition tools, Historical manuscripts},
+  annote     = {The authors of this article include Mohamed Ali Souibgui, Asma Bensalah, Jialuo Chen, and Alicia Fornes, all of whom are researchers and engineers at the Computer Vision Center at the Autonomous University of Barcelona. They are all specialists in the field of computer vision. The journal article asserts that current Handwritten Text Recognition (HTR) methods often lack tools for end users and may struggle with rare scripts that lack labeled data for training and fine tuning. To solve these problems, they developed and compared 4 different computer vision systems, including two cluster methods and two few shot methods. The few shot methods required slightly more user effort but resulted in higher performance, scalability, and hardware needs. Clustering involves assuming all elements are in one cluster then dividing that cluster into sub clusters until the minimum number of symbols in each cluster is reached. The best clusters are used to identify which symbol matches each cluster best. In the few shot method, each symbol is seen as a node in a graph and the similarity between each pair of symbols is measured. Comparing similarities between symbols can be scaled to compare whole lines Several parts of this paper are applicable to my wider research goals. First, the images used were preprocessed, something I will likely need to do, using binarization, which separates the foreground and background, and segmentation, which removes margins. Furthermore, segmentation is implemented to identify connected components to isolate symbols. I may need to implement these steps to transcribe lines of text. Second, the clustering and few shot methods of computer vision could provide an alternative if the standard approaches fail to work for a specific script. These could also be easier methods to use if I ever create my own data sets because they require little learning. Finally, few shot detection is good for cursive because it avoids segmentation issues.}
 }
 
 @misc{modelContextProtocol/getting-started/intro,
