add annotation for A Survey of Multi-AI Agent Collaboration: Theories, Technologies and Applications

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -93,7 +93,8 @@
   keywords  = {Collaborative mechanism, Communication protocol, Large language model, Multi-AI Agent collaboration, Reinforcement learning},
   location  = {
                },
-  series    = {DEAI '25}
+  series    = {DEAI '25},
+  annote    = {All authors for this journal article were researchers at the Nanjing Research Institute of Next-generation Artificial Intelligence or the China Academy of Information and Communications Technology. According to this article, AI agents convert LLMs to valuable tools with real application and problem-solving abilities. The memory of an AI agent allows it to plan how to best interact with the external environment by using function call techniques. With the multi-AI Agent collaboration system, different AI Agents can interact with each other. In the system, each AI Agent focuses on a specific domain or task and has specialized knowledge, skills, and experience in that area. Architecture can be vertical meaning that there is a lead agent or horizontal meaning all agents are equal. Agent network protocol and model context protocol are two protocols to help connect multiple agents. ANP has equal interaction between AI agents. MCP uses the model as its core and provides a common interface between all agents. AI agents may learn with technologies such as Multi agent reinforcement learning. This aims to teach optimal decision strategies through interactions with agents and their environment. Generally, multiple agent systems surpass the limitations of single agent systems, but may lack personalization, adaptability, and potentially coordination. Privacy issues are also present. This provides me with a fundamental understanding of the multiple agent interactions I wish to have controlling different computer vision systems. I may need to implement many computer vision systems to properly utilize the AI agents. This also provides very brief background on MCP.}
 }
 
 @article{10.1145/3519306,
