add source Design and implementation of interactive image measurement software based on Tkinter and PIL library

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -135,3 +135,17 @@
   annote  = {Notably this article is peer reviewed as were all articles for the IJCNN which were later posted to the IEEE Xplore, but it is only freely accessible through Arxiv. This article for the 2017 International Joint Conference on Neural Networks was written primarily by faculty and lecturers at Western Sydney University. Professor Andre van Schaik has a Ph.D. degree in Electrical Engineering, Dr Saeed Afshar is a senior lecturer with degrees in engineering, Dr. has degrees in electrical and computer engineering and Ph.D.’s in Bioelectronics and Neuroscience and Neuromorphic engineering all with the International Centre for Neuromorphic Systems. Additionally, Professor Jonathan Tapson with a Ph.D. in Electrical Engineering, worked at the MARCS Institute for Brain, Behavior, and Development.  These researchers focused on neuromorphic computing or an approach to computing inspired by the human brain, closely tied to AI. They created a dataset from the NIST dataset which used the same image structures as the MNIST dataset. This dataset is called the Extended Modified NIST or EMNIST. For context, the MNIST dataset is a set of handwritten numbers used by Ying Yu and Yuhe Tian in their article “Research Application of Computer Vision-Based Convolution Neural Network in Handwriting Recognition Technology” to develop a computer vision system. This dataset took other elements from the NIST dataset to also include alphabetical characters. Notably, this dataset contains many different writers’ handwriting. This was done to provide an accessible basic dataset for testing purposes. Because of this, it was programmed with splits for testing and has data for validation. Although this dataset was meant for research, I believe that through the division of elements within lines of text it could be used as a basis for a modern handwriting computer vision system. By using this system, I would be able to interact with the datasets using any code that can interact with the very popular MNIST datasets.}
 }
 
+@inbook{10.1145/3727648.3727740,
+  author    = {He, Xiao and Wang, Zhulin and Zhan, Shaozheng},
+  title     = {Design and implementation of interactive image measurement software based on Tkinter and PIL library},
+  year      = {2025},
+  isbn      = {9798400712647},
+  publisher = {Association for Computing Machinery},
+  address   = {New York, NY, USA},
+  url       = {https://doi.org/10.1145/3727648.3727740},
+  abstract  = {In this paper, we design and implement a high-precision image processing and measurement software based on Python. The software utilizes the Tkinter and PIL libraries to build a graphical user interface and integrates a variety of commonly used image processing algorithms, including grayscale conversion, edge extraction, Gaussian blur, image sharpening, binarization, and median filtering, enabling effective image enhancement and segmentation. In addition, the software provides interactive measurement functionality, allowing users to draw rectangular regions on the image using the mouse and automatically calculate the dimensions of these rectangles. Measurement results can be stored, displayed, and managed, facilitating users in analyzing and processing the data. To evaluate the performance and reliability of the software, we conducted experiments on multiple datasets. The experimental results demonstrate that the software can accurately process images of different types and qualities and provide stable and reliable measurement results. Compared with the existing C-scan measurement software of current equipment, the software developed in this study has certain advantages in terms of functional integration, interactivity, and measurement accuracy. The design and implementation of this software can meet the need to replace the existing C-scan system software, while also providing valuable references and insights for the further development of intelligent and automated image analysis systems.},
+  booktitle = {Proceedings of the 4th International Conference on Computer, Artificial Intelligence and Control Engineering},
+  pages     = {564–568},
+  numpages  = {5},
+  annote    = {}
+}
