add annotation for Design and implementation of interactive image measurement software based on Tkinter and PIL library

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -147,5 +147,5 @@
   booktitle = {Proceedings of the 4th International Conference on Computer, Artificial Intelligence and Control Engineering},
   pages     = {564–568},
   numpages  = {5},
-  annote    = {}
+  annote    = {This paper was written by three researchers with the National Key Laboratory of Strength and Structural Integrity Xi’an, Shaanxi, China Aircraft Strength Research Institute of China. Notably, this is not exclusively or primarily a computer science research institute, but one author Xiao He has at least a master’s degree from a Computer Science and Technology program from Northwestern Polytechnical University. It is difficult to determine the background of the other researchers due to language barriers. Because of Xiao He’s background, I believe the research is credible, but perhaps less than research done by a computer science focused institution would be. The paper explores the implementation of image processing using Python’s Tkinter and PIL libraries including a user interface. The program performed this image processing by implementing the Python Imaging Library or (PIL) and NumPy. Through these libraries they were able to use PIL’s convert function to perform gray-scale conversion, and the Gaussian blur is implemented using the convolve function of NumPy. Other processes implemented include image sharpening, binarization, edge extraction, and median filtering. Furthermore, the project performed an image measurement function for regions of interest from C-scan images. This article contributes to my project by offering guidance on how to perform the image processing methods that I will need to have completed before comparing images within certain methods including few shot and cluster computer vision. It also introduces a type of Python user interface which may help me avoid web development.}
 }
